# predictive-maintenance-showcase

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/processed/: early_warning_alerts.csv  model_metrics.csv  sensor_importance.csv  sensor_signal_ranking.csv  test_window_predictions_preview.csv
notebooks/: predictive_maintenance_analysis.ipynb
reports/: README.md  early_warning_summary.md
scripts/: build_notebook.py  run_pipeline.py
src/predictive_maintenance/: __init__.py  config.py  data.py  features.py  models.py  pipeline.py  reporting.py
